# enterprise-RAG

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  services.sh
configs/: milvus.yaml.template
eval_data/: milvus_qa.json  milvus_qa_20.json  milvus_qa_70.json  milvus_qa_smoke5.json  sample_dataset.json
src/: config.py  main.py
src/api/: health.py  responses.py
src/api/routes/: chat.py  documents.py  eval.py
src/core/: cache.py  chunking.py  embeddings.py  generator.py  query_rewriter.py  reranker.py  retriever.py
src/db/: milvus_client.py  mysql_client.py  redis_client.py
src/evaluation/: cli.py  dataset.py  latency_tracker.py  metrics.py  report.py  retrieval_metrics.py  run_eval.py  statistical.py  synthetic_data.py
src/ingestion/: bulk.py  loader.py  parser.py  pipeline.py
tests/: conftest.py
tests/integration/: test_cache.py  test_health.py
tests/unit/: test_config.py  test_dataset.py  test_generator.py  test_latency_tracker.py  test_parser.py  test_pipeline.py  test_retrieval_metrics.py  test_retriever.py  test_statistical.py
