[project]
name = "enterprise-rag"
version = "0.1.0"
description = "Enterprise RAG Knowledge Base - Production-grade RAG pipeline with hybrid retrieval and reranking"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.3",
    "pydantic-settings==2.7.0",
    "python-multipart==0.0.18",
    "sqlalchemy==2.0.36",
    "pymysql==1.1.1",
    "redis==5.2.1",
    "pymilvus==2.5.0",
    "FlagEmbedding==1.2.11",
    "torch>=2.6.0,<2.7.0",
    "transformers>=4.47.0",
    "sentence-transformers>=3.3.1",
    "langchain-text-splitters==0.3.3",
    "pymupdf==1.25.1",
    "python-docx==1.1.2",
    "numpy>=1.26.4",
    "scipy>=1.14.1",
    "openai==1.58.1",
    "httpx==0.28.1",
    "tenacity==9.0.0",
    "ragas==0.2.8",
    "datasets==3.2.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "loguru==0.7.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "httpx==0.28.1",
    "ruff==0.8.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
